--- a/public/index.html
+++ b/public/index.html
@@ -1237,7 +1237,7 @@ document.addEventListener('DOMContentLoaded', async function() {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 ">
   <p style="margin: 0; padding-bottom: 10px; font-size: 1.1rem;">
-    © 2025 <strong style="color: #4ecdc4; font-weight: 600;">Dũngkon</strong>. All rights reserved
+    © 2025 <strong style="color: #4ecdc4; font-weight: 600;">ThuyLinh</strong>. All rights reserved
   </p>
   
   <div style="
@@ -1247,7 +1247,7 @@ document.addEventListener('DOMContentLoaded', async function() {
     margin: 15px 0;
     flex-wrap: wrap;
   ">
-    <a href="https://facebook.com/dungkon2002" 
+    <a href="https://www.facebook.com/de.red.735?mibextid=JRoKGi" 
        style="
          color: white;
          text-decoration: none;
@@ -1306,7 +1306,7 @@ document.addEventListener('DOMContentLoaded', async function() {
     font-size: 0.85rem;
     color: rgba(255, 255, 255, 0.7);
   ">
-    Made with ❤️ by Dũngkon
+    Made with ❤️ Thùy Linh
   </div>
 </footer>
 
