--- a/public/ungho.html
+++ b/public/ungho.html
@@ -26,7 +26,7 @@
               
                 <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4 bg-sky-50 p-4 rounded-xl shadow">
                   <div class="flex items-center gap-3">
-                    <img src="https://www.eurocham-cambodia.org/images/members/logos/67969-mb-bank.png" alt="MBBank" class="w-10 h-10 rounded-full">
+                    <img src="https://files.catbox.moe/tboxzz.jpg" alt="BVBank" class="w-10 h-10 rounded-full">
                     <div>
                       <div class="font-semibold text-sky-700">BVBANK</div>
                       <div id="mbbank-number" class="text-gray-800">99ZP25180M09718590</div>
