--- a/public/api.html
+++ b/public/api.html
@@ -450,7 +450,7 @@ fetch(`/api/convert?url=${imageUrl}`)
 from urllib.parse import quote
 
 base_url = "/api/convert"
-image_url = "https://i.ibb.co/JWLLvHf8/logo.jpg"
+image_url = "https://files.catbox.moe/55h8ek.png"
 encoded_url = quote(image_url, safe='')
 
 try:
