--- a/public/api.html
+++ b/public/api.html
@@ -468,7 +468,7 @@ except Exception as e:
             
             <div class="response-schema">{
   "success": true,
-  "originalUrl": "https://i.ibb.co/JWLLvHf8/logo.jpg",
+  "originalUrl": "https://files.catbox.moe/55h8ek.png",
   "convertedUrl": "/uploads/converted-1749108026752-lb3ygu0p2.jpg"
 }</div>
             
