--- a/public/api.html
+++ b/public/api.html
@@ -549,7 +549,7 @@ except Exception as e:
         // Cập nhật các ví dụ với domain hiện tại
         document.getElementById('api-endpoint').textContent = fullApiUrl + '?url=<URL_HÌNH_ẢNH_CẦN_CHUYỂN_ĐỔI>';
         
-        const exampleUrl = 'https://i.ibb.co/JWLLvHf8/logo.jpg';
+        const exampleUrl = 'https://files.catbox.moe/55h8ek.png';
         const encodedExampleUrl = encodeURIComponent(exampleUrl);
         
         document.getElementById('curl-example').textContent = 
