--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Công cụ upload và convert ảnh/video/GIF miễn phí, hỗ trợ nhiều định dạng, chuyển đổi hàng loạt link media dễ dàng">
   <meta name="keywords" content="upload ảnh, convert video, chuyển đổi GIF, công cụ media, miễn phí">
   <title>Upload File</title>
-  <link rel="icon" href="https://i.ibb.co/JWLLvHf8/logo.jpg" type="image/png">
+  <link rel="icon" href="https://files.catbox.moe/55h8ek.png" type="image/png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
