--- a/public/ungho.html
+++ b/public/ungho.html
@@ -24,13 +24,13 @@
       <section id="chuyenkhoan" class="mt-10 bg-white p-6 rounded-2xl shadow-xl space-y-6 text-center">
         <h2 class="text-xl font-semibold text-sky-700 mb-4">Ủng Hộ Qua QR Code</h2>
 
-        <img src="https://files.catbox.moe/39w610.png" alt="QR Thùy Linh" class="w-72 mx-auto rounded-xl shadow-xl border border-gray-300">
+        <img src="https://files.catbox.moe/wzfqqj.jpeg" alt="QR Thùy Linh" class="w-72 mx-auto rounded-xl shadow-xl border border-gray-300">
         
         <p class="text-gray-700 mt-4">Quét mã bằng ứng dụng ngân hàng / ví để ủng hộ Thùy Linh nhé 💖</p>
 
         <div class="mt-6">
-          <p class="font-semibold text-sky-700">STK: 99ZP25180M09718590 (BVBank)</p>
-          <button onclick="copyAccount('99ZP25180M09718590', 'BVBANK')" class="mt-3 flex items-center gap-2 mx-auto bg-blue-600 hover:bg-blue-700 text-white text-sm font-medium px-4 py-2 rounded-full shadow transition-all duration-300">
+          <p class="font-semibold text-sky-700">STK: 7104042010 (MBBank)</p>
+          <button onclick="copyAccount('7104042010', 'MBBank')" class="mt-3 flex items-center gap-2 mx-auto bg-blue-600 hover:bg-blue-700 text-white text-sm font-medium px-4 py-2 rounded-full shadow transition-all duration-300">
             📋 Copy STK
           </button>
         </div>
