--- a/public/ungho.html
+++ b/public/ungho.html
@@ -46,7 +46,7 @@
     </main>
 
     <footer class="mt-12 text-center text-gray-500 text-sm">
-      <p>© 2025 Bản quyền thuộc về Nguyễn Đinh Tiến Dũng. Mọi quyền được bảo lưu.</p>
+      <p>© 2025 Bản quyền thuộc về Văn Đức. Mọi quyền được bảo lưu.</p>
     </footer>
   </div>
 
