Update Facebook link and footer name

--- a/public/index.html
+++ b/public/index.html
@@ -1247,7 +1247,7 @@ document.addEventListener('DOMContentLoaded', async function() {
     margin: 15px 0;
     flex-wrap: wrap;
   ">
-    <a href="https://www.facebook.com/de.red.735?mibextid=JRoKGi" 
+    <a href="https://www.facebook.com/VanDucYuz" 
        style="
          color: white;
          text-decoration: none;
@@ -1306,7 +1306,7 @@ document.addEventListener('DOMContentLoaded', async function() {
     font-size: 0.85rem;
     color: rgba(255, 255, 255, 0.7);
   ">
-    Made with ❤️ Thùy Linh
+    Made with ❤️ Van Duc
   </div>
 </footer>
 
